<?xml version="1.0" encoding="utf-8"?>
<!--Основной экран приложения плей лист-->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background_PLM"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding16dp"
        android:paddingRight="@dimen/padding16dp"
        android:paddingTop="@dimen/padding14dp"
        tools:context=".MainActivity"
    >

    <!--Заголовок-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/main_text_title_PLM"
        android:textSize="@dimen/text22sp"
        android:paddingTop="@dimen/padding2dp"
        android:paddingBottom="@dimen/padding2dp"
        android:layout_marginBottom="@dimen/margin40dp"
        />

    <!--Первая кнопка-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_Find"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textAllCaps="false"
        android:backgroundTint="@color/white"
        android:text="@string/app_find"
        android:textColor="@color/main_text_PLM"
        android:textSize="@dimen/text22sp"
        app:icon="@drawable/main_search"
        app:iconGravity="textStart"
        app:iconTint="@color/main_text_PLM"
        app:iconPadding="@dimen/padding10dp"
        app:cornerRadius="@dimen/radius16dp"
        android:layout_marginBottom="@dimen/margin16dp"
        />

    <!--Вторая кнопка-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_Media"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textAllCaps="false"
        android:backgroundTint="@color/white"
        android:text="@string/app_media"
        android:textColor="@color/main_text_PLM"
        android:textSize="@dimen/text22sp"
        app:icon="@drawable/main_laibrary"
        app:iconGravity="textStart"
        app:iconTint="@color/main_text_PLM"
        app:iconPadding="@dimen/padding10dp"
        app:cornerRadius="@dimen/radius16dp"
        android:layout_marginBottom="@dimen/margin16dp"
        />

    <!--Третья кнопка-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_Settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textAllCaps="false"
        android:backgroundTint="@color/white"
        android:text="@string/app_settings"
        android:textColor="@color/main_text_PLM"
        android:textSize="@dimen/text22sp"
        app:icon="@drawable/main_settings"
        app:iconGravity="textStart"
        app:iconTint="@color/main_text_PLM"
        app:iconPadding="@dimen/padding10dp"
        app:cornerRadius="@dimen/radius16dp"
        android:layout_marginBottom="@dimen/margin16dp"
        />
    </LinearLayout>